--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -19,5 +19,10 @@ services:
             PGADMIN_DEFAULT_PASSWORD: admin
         ports:
             - 8080:80
+    redis:
+        image: redis:latest
+        restart: always
+        ports:
+            - 6379:6379
 volumes:
     postgres_data:
